# project1_Golubtsov_Valerii_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: constans.py  constants.py  main.py  player_actions.py  utils.py
