[project]
name = "project1-golubtsov-valerii-m25-555"
version = "0.1.0"
description = "Проект №1 Программирование на Python. В рамках проекта была разработана игра Labyrinth Game"
authors = [
    {name = "Valerii Golubtsov"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "labyrinth_game" }
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []